This is a major update. The app's functionality is almost complete. The photo viewer is complete and all photos have been moved to the asset folder. I have started setting up the answering method for the app. I have made the skeleton functions for the menu inflators too. I still need to have to finsh page added and I need to create the string comparison for the answer. I would also like to move the current status on the viewer page to a better location on the layout. Sharing still needs to be researched.
Signed-off-by: knennigtri <knennig213@gmail.com>

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue_light">#000000</color>
+    <color name="blue_light">#449def</color>
     <color name="blue_dark">#2f6699</color>
     
     <color name="red_light">#ef4444</color>
