--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+	<item android:id="@+id/menu_rate_this"
+        android:title="@string/menu_rate_this"
+        android:orderInCategory="1400"
+        android:showAsAction="never"/>  
+    <item android:id="@+id/menu_about"
+        android:title="@string/menu_about"
+        android:orderInCategory="300"
+        android:showAsAction="never"/>  
 </menu>
