--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -44,17 +44,17 @@
         <Button
             android:id="@+id/main_start_button"
             style="@style/ButtonText"
-            android:background="@drawable/blue_button"
+            android:background="@drawable/red_button"
             android:text="@string/main_start_button" />
 		<Button
             android:id="@+id/main_review_button"
             style="@style/ButtonText"
-            android:background="@drawable/blue_button"
+            android:background="@drawable/red_button"
             android:text="@string/main_review_button" />
         <Button
             android:id="@+id/main_more_games_button"
             style="@style/ButtonText"
-            android:background="@drawable/blue_button"
+            android:background="@drawable/red_button"
             android:text="@string/main_more_games" />
     </LinearLayout>
 
