--- a/res/layout/activity_viewer.xml
+++ b/res/layout/activity_viewer.xml
@@ -4,7 +4,10 @@
     android:layout_height="match_parent"
     android:background="#000000">
 
-    <FrameLayout
+        
+
+    
+    <LinearLayout
         android:id="@+id/viewer_photoFrame"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
@@ -15,64 +18,70 @@
 	    android:layout_marginBottom="140dp"
 	    android:background="#000000"
 	    android:orientation="vertical">
-
         <ImageView
 		    android:id="@+id/viewer_imageView"
 		    android:text="text"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content" 
 		    />
-        
-		<LinearLayout 
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content" 
-		    android:orientation="horizontal">
-		    
-		    <TextView 
-            android:id="@+id/viewer_picture_counter"
-            android:text="0"
-            android:textColor="#ffffff"
-            style="@style/ViewerText"
-            />
-		    
-		    <TextView 
-            android:id="@+id/viewer_memorized"
-            android:text="0"
-            android:textColor="#70c656" 
-            style="@style/ViewerText"
-            />
-		    
-		    <TextView 
-            android:id="@+id/viewer_wrong"
-            android:text="0"
-            android:textColor="#ef4444"
-            style="@style/ViewerText"
-            />
-		    
-		</LinearLayout>
-        
-    </FrameLayout>
-
+    </LinearLayout>
+    
     <LinearLayout
-        android:id="@+id/viewer_controlsFrame"
+        android:id="@+id/viewer_detailFrame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:orientation="vertical" >
+
+        <LinearLayout 
+            android:id="@+id/viewer_statsFrame"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content" 
+		    android:orientation="horizontal">
+	    
+		    <TextView 
+	           android:id="@+id/viewer_picture_counter"
+	           android:text="0/00"
+	           android:textColor="#ffffff"
+	           style="@style/ViewerText"
+	           android:layout_weight="1"
+	           />
+
+		    <TextView
+		        android:id="@+id/viewer_wrong"
+		        style="@style/ViewerText"
+		        android:text="0"
+		        android:textColor="#ef4444" 
+		        android:layout_weight="1"
+		        />
+
+		    <TextView
+		        android:id="@+id/viewer_memorized"
+		        style="@style/ViewerText"
+		        android:text="0"
+		        android:textColor="#70c656" 
+		        android:layout_weight="1"
+		        />
+	    
+		</LinearLayout>
         
-        <TextView
-        android:id="@+id/viewer_photoName"
-        style="@style/ButtonText">
-   		</TextView>
-   		
-        <Button
-        android:id="@+id/viewer_next_button"
-        android:background="@drawable/blue_button"
-           style="@style/ButtonText"
-        android:text="@string/next_button" />
-        
+        <LinearLayout 
+            android:id="@+id/viewer_controlsFrame"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content" 
+		    android:orientation="vertical">
+	        <TextView
+	            android:id="@+id/viewer_photoName"
+	            style="@style/ButtonText" />
+	   		
+	        <Button
+	        android:id="@+id/viewer_next_button"
+	        android:background="@drawable/red_button"
+	           style="@style/ButtonText"
+	        android:text="@string/next_button" />
+        </LinearLayout>
 	</LinearLayout>
 </RelativeLayout>
