--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="blue_light">#449def</color>
     <color name="blue_dark">#2f6699</color>
     
-    <color name="red_light">#ef4444</color>
-    <color name="red_dark">#992f2f</color>
+    <color name="red_light">#CC4444</color>
+    <color name="red_dark">#0F0F0F</color>
     
     <color name="green_light">#70c656</color>
     <color name="green_dark">#53933f</color>
