--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -60,5 +60,6 @@
 	    <item name="android:shadowDx">1</item>
 	    <item name="android:shadowDy">1</item>
 	    <item name="android:shadowRadius">2</item>
+	    <item name="android:gravity">center</item>
 	</style>
 </resources>
