--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,11 +5,11 @@
     android:background="#000000">
 
     <LinearLayout
-        android:id="@+id/main_text_ll"
+        android:id="@+id/main_title_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical">
     <TextView
         android:id="@+id/main_welcomeText"
@@ -19,43 +19,74 @@
         android:id="@+id/main_nameThat_name"
         style="@style/MainText"
         android:text="@string/app_name"/>
-    <TextView
-        android:id="@+id/main_best_attempt"
-        style="@style/MainText"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="left"
-        android:text="@string/main_text" />
-    <TextView
-        android:id="@+id/main_attempts"
-        style="@style/MainText"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="left"
-        android:text="@string/main_text" />
+	</LinearLayout>
+	
+    <LinearLayout
+        android:id="@+id/main_photoFrame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_title_text"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="3dp"
+        android:background="#000000"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/main_imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="text" />
+
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/main_buttonFrame"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical" >
 
         <Button
             android:id="@+id/main_start_button"
             style="@style/ButtonText"
-            android:background="@drawable/red_button"
+            android:background="@drawable/blue_button"
             android:text="@string/main_start_button" />
 		<Button
             android:id="@+id/main_review_button"
             style="@style/ButtonText"
-            android:background="@drawable/red_button"
+            android:background="@drawable/blue_button"
             android:text="@string/main_review_button" />
         <Button
             android:id="@+id/main_more_games_button"
             style="@style/ButtonText"
-            android:background="@drawable/red_button"
+            android:background="@drawable/blue_button"
             android:text="@string/main_more_games" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/main_stats_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_above="@id/main_buttonFrame"
+        android:orientation="vertical">
+	    <TextView
+	        android:id="@+id/main_best_attempt"
+	        style="@style/MainText"
+	        android:layout_marginLeft="10dp"
+	        android:layout_gravity="left"
+	        android:textSize="20dp"
+	        android:text="@string/main_text" />
+	    <TextView
+	        android:id="@+id/main_attempts"
+	        style="@style/MainText"
+	        android:layout_marginLeft="10dp"
+	        android:layout_gravity="left"
+	        android:textSize="20dp"
+	        android:text="@string/main_text" />
+   </LinearLayout>
+    
 </RelativeLayout>
