--- a/res/layout/activity_viewer.xml
+++ b/res/layout/activity_viewer.xml
@@ -3,9 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000">
-
-        
-
     
     <LinearLayout
         android:id="@+id/viewer_photoFrame"
@@ -50,6 +47,14 @@
 	           android:layout_weight="1"
 	           />
 
+		     <TextView
+		        android:id="@+id/viewer_memorized"
+		        style="@style/ViewerText"
+		        android:text="0"
+		        android:textColor="#70c656" 
+		        android:layout_weight="1"
+		        />
+		    
 		    <TextView
 		        android:id="@+id/viewer_wrong"
 		        style="@style/ViewerText"
@@ -57,31 +62,43 @@
 		        android:textColor="#ef4444" 
 		        android:layout_weight="1"
 		        />
-
-		    <TextView
-		        android:id="@+id/viewer_memorized"
-		        style="@style/ViewerText"
-		        android:text="0"
-		        android:textColor="#70c656" 
-		        android:layout_weight="1"
-		        />
-	    
 		</LinearLayout>
         
+
         <LinearLayout 
             android:id="@+id/viewer_controlsFrame"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content" 
 		    android:orientation="vertical">
-	        <TextView
-	            android:id="@+id/viewer_photoName"
-	            style="@style/ButtonText" />
-	   		
-	        <Button
-	        android:id="@+id/viewer_next_button"
-	        android:background="@drawable/red_button"
-	           style="@style/ButtonText"
-	        android:text="@string/next_button" />
+
+            <LinearLayout 
+	            android:id="@+id/viewer_answerFrame"
+			    android:layout_width="fill_parent"
+			    android:layout_height="wrap_content">
+		        <TextView
+			            android:id="@+id/viewer_photoName"
+			            style="@style/ButtonText" />
+	        </LinearLayout>
+            <LinearLayout 
+	            android:id="@+id/viewer_buttonFrame"
+			    android:layout_width="fill_parent"
+			    android:layout_height="wrap_content"
+			    android:orientation="horizontal">
+		        
+		        <Button
+		        android:id="@+id/viewer_answer_button"
+		        android:background="@drawable/red_button"
+		         style="@style/ButtonText"
+		        android:text="@string/viewer_answer_button" 
+		        android:layout_weight="1"/>
+		        
+		        <Button
+		        android:id="@+id/viewer_next_button"
+		        android:background="@drawable/red_button"
+		          style="@style/ButtonText"
+		        android:text="@string/next_button" 
+		        android:layout_weight="1"/>
+	        </LinearLayout>
         </LinearLayout>
 	</LinearLayout>
 </RelativeLayout>
